2000-02-19  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (try_to_contact_server): Make sure we always set 
	an error

2000-02-15  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-changeset.c (gconf_change_set_set): apply patch from 
	Rusty Conover <rconover@zootweb.com> fixing an infinite recursion
	typo

	* gconf/gconfd.c (fast_cleanup): Don't bother to unregister with
	OAF

2000-02-01  Havoc Pennington  <hp@redhat.com>

	* configure.in (GCONF_CONFIG_SOURCE): update default schema
	install source
	(XML_LIBS): add better check that we actually ran xml-config
	successfully

	* gconf/gconf-backend.c (gconf_backend_resolve_address): Honor the
	"readonly" flag in address names

	* gconf/gconf-sources.c (SOURCE_WRITEABLE): convert to a function,
	source_is_writeable

	* gconf/gconf-sources.h: add GCONF_SOURCE_NEVER_WRITEABLE flag

	* tests/testaddress.c: new test to verify the functions that break
	up a configuration source address

	* gconf/gconf-backend.c (gconf_address_flags): function to extract
	configuration source flags

	* doc/gconf/gconf.sgml: note new configuration source URL format

	* gconf/gconf.c: Add space, tab, carriage return, newline to the
	invalid characters in a gconf key

2000-01-31  Havoc Pennington  <hp@redhat.com>

	* wrappers/gtk/gconf-client.c (check_type): include name of the
	key with the wrong type in the error message

2000-01-31  Havoc Pennington  <hp@redhat.com>

	* wrappers/gtk/gconf-client.c
	(gconf_client_real_unreturned_error): only handle the error if the
	mode is GCONF_CLIENT_HANDLE_UNRETURNED
	(gconf_client_real_error): only handle if GCONF_CLIENT_HANDLE_ALL
	(gconf_client_init): change default error handling to 
	GCONF_CLIENT_HANDLE_UNRETURNED

	* wrappers/gtk/gconf-client.h: don't pass error handling mode to
	the error handler function

2000-01-28  Havoc Pennington  <hp@redhat.com>

	* wrappers/gtk/gconf-client.c
	(gconf_client_set_global_default_error_handler): New function so