@@ -1,3 +1,8 @@
+2000-02-22  Elliot Lee  <sopwith@redhat.com>
+	* tests/Makefile.am: srcdir != builddir fix.
+	* wrappers/gtk/Makefile.am: Add libgconf-gtk.la to testgconfclient
+	deps so that 'make -j' builds will work correctly.
+
 2000-02-19  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf.c (try_to_contact_server): Make sure we always set 
